--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "connString": "Server=DESKTOP-PI8PM1U\\SQLEXPRESS;database=DBCRUDCORE;"
+    "connString": "Server=.;database=DBCRUDCORE;Trusted_Connection=true;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
